# Cuda-Normal

./: CMakeLists.txt
data/: Pointnormals.asc
include/: Device_Array.hpp  Device_Memory.h  Device_Pointer.hpp  Knn_Search.hpp  Morton.hpp  NeighborIndices.hpp  Octree Device Iterator.hpp  Octree.h  Radius_Search.hpp  Utils.hpp  Warp.hpp  tiny_obj_loader.h  tinyobj_loader_c.h
src/: CudaNormals.cu  Device_Memory.cpp  main.cpp
